--- a/composer.json
+++ b/composer.json
@@ -72,5 +72,8 @@
         "branch-alias": {
             "dev-main": "4.6.x-dev"
         }
+    },
+    "config": {
+        "allow-plugins": false
     }
 }
